--- a/src/app/templates/create_news.component.html
+++ b/src/app/templates/create_news.component.html
@@ -7,3 +7,4 @@
         <i _ngcontent-c1 class="fa fa-plus" aria-hidden="true" (click)="add_article()"></i>
     </div>
 </div>
+<error [error]="error"></error>
