--- a/src/app/templates/home.component.html
+++ b/src/app/templates/home.component.html
@@ -47,7 +47,7 @@
                 <div class="orange-divider">
                     <div class="third"></div>
                 </div>
-                <h2 id="destinations" class="heading-2">Conception</h2>
+                <h2 id="destinations" class="heading-2">Description</h2>
                 <div data-duration-in="300" data-duration-out="100" class="w-tabs">
                     <div class="tabs-menu w-tab-menu">
                         <a data-w-tab="The Moon" class="planet-tab w-inline-block w-tab-link w--current" onclick="vr_click()" id="vr_link">
@@ -57,12 +57,12 @@
                         </a>
                         <a data-w-tab="Jupiter" class="planet-tab jupiter w-inline-block w-tab-link" onclick="card_click()" id="card_link">
                             <div class="planet-tab-description">
-                                <div>CARD</div>
+                                <div>CARTES</div>
                             </div>
                         </a>
                         <a data-w-tab="Mars" class="planet-tab mars w-inline-block w-tab-link" onclick="war_click()" id="war_link">
                             <div class="planet-tab-description">
-                                <div>WAR</div>
+                                <div>GUERRE</div>
                             </div>
                         </a>
                         <a data-w-tab="Saturn" class="planet-tab saturn w-inline-block w-tab-link" onclick="esport_click()" id="esport_link">
@@ -80,12 +80,10 @@
                                         <div class="tiny-orange-call-out"></div>
                                     </div>
                                 </div>
-                                <h4 class="heading-3">VIRTUAL REALITY</h4>
-                                <div class="destination__sub-heading">Forgot the motion sickness</div>
+                                <h4 class="heading-3">REALITE VIRTUELLE</h4>
+                                <div class="destination__sub-heading">Oubliez le motion sickness</div>
                             </div>
-                            <p class="destination__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum, leo sit amet lacinia sollicitudin, metus nisi rutrum mauris, in aliquam dolor lacus in eros. Fusce porttitor sed ante eu dapibus. Donec consectetur
-                                molestie velit pharetra ullamcorper. Ut at tortor sed leo posuere mattis. Cras ullamcorper mi vel ante tristique scelerisque. Donec condimentum bibendum ex non blandit. Fusce faucibus dui a odio vestibulum, non mollis turpis
-                                mollis. Sed at dapibus leo. Nulla vestibulum hendrerit facilisis. Quisque quis neque eu neque mollis hendrerit.</p>
+                            <p class="destination__description">A bord de votre cockpit, ressentez la fierté de vos victoire sans motion sickness. Disponible sur steam et compatible avec l'Occulus Rift et le HTC Vive, venez prendre par à de nombreuses batailles.</p>
                             <div class="destination__images">
                                 <div data-w-id="7f79de50-428c-d740-a084-c030b530013d" class="w-row">
                                     <div class="no-padding-col w-col w-col-6 w-col-small-6 w-col-tiny-6"><img src="assets/img/dinner.jpg" srcset="assets/img/dinner-p-500.jpeg 500w, assets/img/dinner.jpg 528w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 45vw, (max-width: 991px) 47vw, 36vw" data-w-id="cbb3d1df-135d-38b9-2639-ef0a5a268cab"></div>
@@ -95,19 +93,17 @@
                             </div>
                         </div>
                         <div data-w-tab="Jupiter" class="tab-pane w-tab-pane" id="card">
-                            <h3 data-w-id="71f551f8-0a7e-b819-fb7c-2ed26f16b1aa" class="massive-heading" id="card_heading">CARD</h3>
+                            <h3 data-w-id="71f551f8-0a7e-b819-fb7c-2ed26f16b1aa" class="massive-heading" id="card_heading">CARTES</h3>
                             <div class="destination-heading">
                                 <div class="orange-divider reversed">
                                     <div class="third upper">
                                         <div class="tiny-orange-call-out"></div>
                                     </div>
                                 </div>
-                                <h4 class="heading-4">PLAYING CARD</h4>
-                                <div class="destination__sub-heading">Build your strategie</div>
+                                <h4 class="heading-3">JEU DE CARTES</h4>
+                                <div class="destination__sub-heading">Concevez votre stratégie</div>
                             </div>
-                            <p class="destination__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum, leo sit amet lacinia sollicitudin, metus nisi rutrum mauris, in aliquam dolor lacus in eros. Fusce porttitor sed ante eu dapibus. Donec consectetur
-                                molestie velit pharetra ullamcorper. Ut at tortor sed leo posuere mattis. Cras ullamcorper mi vel ante tristique scelerisque. Donec condimentum bibendum ex non blandit. Fusce faucibus dui a odio vestibulum, non mollis turpis
-                                mollis. Sed at dapibus leo. Nulla vestibulum hendrerit facilisis. Quisque quis neque eu neque mollis hendrerit.</p>
+                            <p class="destination__description">Grâce au système de race et les différents types de cartes, concevez plusieurs decks pour vaincre vos ennemis. Améliorez les pour devenir de plus en plus puissant. Allez à la boutique ou la forge pour obtenir de nouvelles cartes.</p>
                             <div class="destination__images">
                                 <div data-w-id="b4b67e88-d0a1-9d04-16ee-ac5f45e8c912" class="w-row">
                                     <div class="no-padding-col w-col w-col-6"><img src="assets/img/red-spot-jupiter.jpg" class="image-1"></div>
@@ -117,19 +113,18 @@
                             </div>
                         </div>
                         <div data-w-tab="Mars" class="tab-pane w-tab-pane" id="war">
-                            <h3 data-w-id="79f4f099-0bbd-c669-7c34-bbbae51122ce" class="massive-heading" id="war_heading">WAR</h3>
+                            <h3 data-w-id="79f4f099-0bbd-c669-7c34-bbbae51122ce" class="massive-heading" id="war_heading">GUERRE</h3>
                             <div class="destination-heading">
                                 <div class="orange-divider reversed">
                                     <div class="third upper">
                                         <div class="tiny-orange-call-out"></div>
                                     </div>
                                 </div>
-                                <h4>GREAT WAR</h4>
-                                <div class="destination__sub-heading">Command a fleet to destroy your enemies</div>
+                                <h4 class="heading-3">GUERRE</h4>
+                                <div class="destination__sub-heading">Commandez une flotte de vaisseaux pour détruire vos adversaires</div>
                             </div>
-                            <p class="destination__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum, leo sit amet lacinia sollicitudin, metus nisi rutrum mauris, in aliquam dolor lacus in eros. Fusce porttitor sed ante eu dapibus. Donec consectetur
-                                molestie velit pharetra ullamcorper. Ut at tortor sed leo posuere mattis. Cras ullamcorper mi vel ante tristique scelerisque. Donec condimentum bibendum ex non blandit. Fusce faucibus dui a odio vestibulum, non mollis turpis
-                                mollis. Sed at dapibus leo. Nulla vestibulum hendrerit facilisis. Quisque quis neque eu neque mollis hendrerit.</p>
+                            <p class="destination__description">En 2118 l'humanité a déjà colonisé un tiers de l'espace connue. La terre et ses colonies formèrent la Fédération, un puissant empire avec la Terre régnant en maître à sa tête. Mais en 2178 les relations entre la terre et ses
+                                colonies se détériorent jusqu’à ce que les 6 plus importantes colonies déclare leur indépendance. Le conflit fut inévitable... </p>
                             <div class="destination__images">
                                 <div data-w-id="f44a0a96-f2e1-7630-1642-9e7f4e423827" class="w-row">
                                     <div class="no-padding-col w-col w-col-6"><img src="assets/img/dinner.jpg" srcset="assets/img/dinner-p-500.jpeg 500w, assets/img/dinner.jpg 528w" sizes="(max-width: 479px) 100vw, (max-width: 586px) 90vw, (max-width: 767px) 528px, (max-width: 991px) 47vw, 36vw"
@@ -148,12 +143,10 @@
                                         <div class="tiny-orange-call-out"></div>
                                     </div>
                                 </div>
-                                <h4>E-SPORT</h4>
-                                <div class="destination__sub-heading">Become more and more powerful</div>
+                                <h4 class="heading-3">E-SPORT</h4>
+                                <div class="destination__sub-heading">Devenez de plus en plus puissant</div>
                             </div>
-                            <p class="destination__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus bibendum, leo sit amet lacinia sollicitudin, metus nisi rutrum mauris, in aliquam dolor lacus in eros. Fusce porttitor sed ante eu dapibus. Donec consectetur
-                                molestie velit pharetra ullamcorper. Ut at tortor sed leo posuere mattis. Cras ullamcorper mi vel ante tristique scelerisque. Donec condimentum bibendum ex non blandit. Fusce faucibus dui a odio vestibulum, non mollis turpis
-                                mollis. Sed at dapibus leo. Nulla vestibulum hendrerit facilisis. Quisque quis neque eu neque mollis hendrerit.</p>
+                            <p class="destination__description">Avec le multijoueur, vous pouvez affronter des personnes du monde entier. Vous pouvez aussi défier la stratégies de vos amis pour vérifier qui est le plus puissant.</p>
                             <div class="destination__images">
                                 <div data-w-id="87ab9c6f-ac50-e7f7-f8d0-3656f8f59f88" class="w-row">
                                     <div class="no-padding-col w-col w-col-6"><img src="assets/img/1.jpg" srcset="assets/img/1-p-500.jpeg 500w, assets/img/1.jpg 528w" sizes="(max-width: 479px) 100vw, (max-width: 586px) 90vw, (max-width: 767px) 528px, (max-width: 991px) 47vw, 36vw" class="image-1"></div>
@@ -168,7 +161,7 @@
                     <div class="orange-divider-cenetred">
                         <div class="third-top"></div>
                     </div>
-                    <h4 class="white-h4">News</h4>
+                    <h4 class="white-h4">Articles</h4>
                     <div class="w-row" *ngIf="ArticlesLimit != []">
                         <div class="w-col w-col-6">
                             <a class="activity-pill" *ngIf="ArticlesLimit[0] != undefined" [routerLink]="['/news', ArticlesLimit[0].ID]">
@@ -211,7 +204,7 @@
                         </div>
                     </div>
                     <a [routerLink]="['/news']" data-w-id="2da3fe3a-187b-878b-214e-0f224b2fed06" class="space-button-centered w-hidden-tiny w-inline-block">
-                        <div>All News</div>
+                        <div>Tous les articles</div>
                         <div class="corner-upper-left"></div>
                         <div class="corner-upper-right"></div>
                         <div class="corner-bottom-right"></div>
@@ -250,4 +243,4 @@
 </div>
 
 <logister></logister>
-<!--<error type="error" message="toto et tata"></error>-->
+<error [error]="error"></error>
