--- a/src/app/templates/news.component.html
+++ b/src/app/templates/news.component.html
@@ -28,7 +28,8 @@
             <img src="http://ec2-13-59-89-177.us-east-2.compute.amazonaws.com:3000/{{article.Slug}}" alt="image article" class="image-article" id="image-article" />
         </div>
     </div>
-        <div class="left-side-white left-side-white--news" style="margin-top: 70px;max-height:unset;"></div>
+    <div class="left-side-white left-side-white--news" style="margin-top: 70px;max-height:unset;"></div>
 </div>
 
 <logister></logister>
+<error [error]="error"></error>
