--- a/src/app/templates/smithy.component.html
+++ b/src/app/templates/smithy.component.html
@@ -5,3 +5,4 @@
     <button class="list-button decks" [routerLink]="['/smithy/decks_list']"><span class="button-inner">Liste des decks</span></button>
 </div>
 <logister></logister>
+<error [error]="error"></error>
