--- a/src/app/templates/admin.component.html
+++ b/src/app/templates/admin.component.html
@@ -39,3 +39,4 @@
     </div>
     <div id="sidenav-overlay" style="display: none; opacity: 0;" onclick="hiddeNavAdmin()"></div>
 </header>
+<error [error]="error"></error>
